<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/bg"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_tvshow_item_photo"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/poster"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_tvshow_item_photo"
        android:layout_toRightOf="@id/img_tvshow_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tvshow_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/tv_tvshow_item_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_star_gold_16dp"
            android:drawablePadding="5dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="@string/movie_information" />

        <TextView
            android:id="@+id/tv_tvshow_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/movie_description" />
    </LinearLayout>
</RelativeLayout>